# ironwail-appimage-test-repo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: appimage_ci.yml
Linux/AppImage/: CMakeLists.txt  Makefile  build-appimage.sh
Linux/AppImage/AppDir/: .DirIcon  io.github.andrei-drexler.ironwail.desktop
Linux/AppImage/AppDir/usr/share/applications/: io.github.andrei-drexler.ironwail.desktop
Linux/AppImage/AppDir/usr/share/metainfo/: io.github.andrei-drexler.ironwail.appdata.xml
Linux/AppImage/Sources/: appimage.c  appimage.h
Linux/AppImage/patches/: 0001-ironwail-AppImage.patch
Misc/cmake/: ExtractVersion.cmake
Quake/: Makefile  Makefile.w32  Makefile.w64  bgmusic.c  bspfile.h  cd_null.c  cl_demo.c  cl_main.c  cl_parse.c  client.h  cmd.c  common.c  common.h  console.c  console.h  cvar.c  cvar.h  draw.h  gl_draw.c  gl_mesh.c  gl_model.c  gl_model.h  gl_refrag.c  gl_rmain.c  gl_rmisc.c  gl_screen.c  gl_shaders.c  gl_shaders.h  gl_sky.c  gl_texmgr.c  gl_texmgr.h  gl_vidsdl.c  glquake.h  host.c  host_cmd.c  image.c  image.h  in_sdl.c  input.h  keys.c  (+38 more)
Windows/VisualStudio/: ironwail.natvis  ironwail.vcxproj  ironwail.vcxproj.filters
Windows/cmake-modules/: FindBundledCODECS.cmake  FindCURL.cmake  FindSDL2.cmake
